NXP-28396: Rework ProcessManager